fix: Fix to register and disconnect works

--- a/src/main/kotlin/client/ui/clientmain.html
+++ b/src/main/kotlin/client/ui/clientmain.html
@@ -62,7 +62,7 @@
 </div>
 <div>
 
-    <button>Disconnect</button>
+    <button onclick="disconnect()">Disconnect</button>
     <button onclick="getFileList('/')">Refresh</button>
 </div>
 
