--- a/src/main/kotlin/client/ui/login.html
+++ b/src/main/kotlin/client/ui/login.html
@@ -2,6 +2,7 @@
 <head>
     <title>Login Page</title>
     <script type="module" src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script src="./login.js"></script>
 </head>
 <body>
 <h1>Login Page</h1>
@@ -15,7 +16,7 @@
     <label for="port">Port:</label><br>
     <input type="number" id="port" name="port"><br>
     <input type="submit" name="login" value="Submit" onclick="onlogin()">
-    <input type="submit" name="register" value="Register">
+    <input type="submit" name="register" value="Register" onclick="onRegister()">
 </div>
 </body>
 </html>
