fix: fix getFileList param

--- a/src/main/kotlin/client/ui/clientmain.html
+++ b/src/main/kotlin/client/ui/clientmain.html
@@ -63,7 +63,7 @@
 <div>
 
     <button onclick="disconnect()">Disconnect</button>
-    <button onclick="getFileList('/')">Refresh</button>
+    <button onclick="getFileList('')">Refresh</button>
 </div>
 
 
