--- a/client/src/main/resources/webapps/clientmain.html
+++ b/client/src/main/resources/webapps/clientmain.html
@@ -35,11 +35,34 @@
                 width: 95%;
                 padding: 10px;
             }
+
+            .uploadRow {
+                border-style: solid;
+                border-width: 2px;
+                display: inline-block;
+                width: 90%;
+                padding: 10px;
+            }
             #right-panel {
                 border-style: solid;
                 width: 30%;
                 height: 100%;
                 padding: 5px;
+            }
+
+            #report-list {
+                border-style: solid;
+                width: 95%;
+                height: 48%;
+                margin: 5px;
+                overflow: scroll;
+            }
+
+            #upload-list {
+                border-style: solid;
+                width: 95%;
+                height: 48%;
+                margin: 5px;
                 overflow: scroll;
             }
         </style>
@@ -51,17 +74,27 @@
                 <div class="row">
                     file name
                     <button style="float: right">download</button>
-                    <button style="float: right">upload</button>
+                    <button
+                        style="float: right"
+                        onclick="addToUploadList('filename')"
+                    >
+                        Select
+                    </button>
                     <span style="float: right; margin-right: 5px"
                         >Uploaded</span
                     >
                 </div>
             </div>
-            <div id="right-panel"></div>
+            <div id="right-panel">
+                <div id="report-list"></div>
+
+                <div id="upload-list"></div>
+            </div>
         </div>
         <div>
             <button onclick="disconnect()">Disconnect</button>
             <button onclick="getFileList('')">Refresh</button>
+            <button onclick="upload()">Upload</button>
         </div>
     </body>
 </html>
