--- a/client/src/main/resources/webapps/clientmain.html
+++ b/client/src/main/resources/webapps/clientmain.html
@@ -114,15 +114,8 @@
                 <div id="file-list">
                     <div class="row">
                         file name
-                        <button style="float: right">download</button>
-                        <button
-                            style="float: right"
-                            onclick="addToUploadList('filename')"
-                        >
-                            Select
-                        </button>
                         <span style="float: right; margin-right: 5px"
-                            >Uploaded</span
+                            >user1</span
                         >
                         <button
                             style="float: right; margin-right: 5px"
