fix: make space between chips

--- a/client/src/main/resources/webapps/clientmain.html
+++ b/client/src/main/resources/webapps/clientmain.html
@@ -108,6 +108,7 @@
 
             .chip {
                 display: inline-block;
+                margin: 5px;
             }
         </style>
     </head>
